--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,18 +1053,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'name_and_ranks' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-ba78dca2ec2b>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-6ffb6038c49b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mnames_and_ranks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{index + 1}. {city_names[index]}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mname_and_ranks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# write a for loop that adds the properly formatted string to the names_and_ranks list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'name_and_ranks' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-ba78dca2ec2b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\").\u001b[0m\n\u001b[0m                                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1072,7 +1069,7 @@
     "names_and_ranks = [] \n",
     "for index in city_indices: \n",
     "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\").\n",
-    "\n",
+    "z\n",
     "name_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
