--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,9 +1068,8 @@
    "source": [
     "names_and_ranks = [] \n",
     "for index in city_indices: \n",
-    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\").\n",
-    "z\n",
-    "name_and_ranks\n",
+    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
+    "    name_and\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
