Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1061,7 @@
     "for index in city_indices: \n",
     "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")\n",
     "    \n",
-    "    names_and_r\n",
+    "    names_and_ranks\n",
     "    \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
