--- a/index.ipynb
+++ b/index.ipynb
@@ -1090,16 +1090,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1. Buenos Aires'"
+       "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
