--- a/index.ipynb
+++ b/index.ipynb
@@ -1105,8 +1105,9 @@
     }
    ],
    "source": [
-    "\n",
-    "names_and_ranks[1] # '2. Toronto'\n"
+    "names_and_ranks[0] # '1. Buenos Aires'\n",
+    "names_and_ranks[1] # '2. Toronto'\n",
+    "names_and_ranks[-1] # '12. Iguazu Falls'"
    ]
   },
   {
