--- a/index.ipynb
+++ b/index.ipynb
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1099,13 +1099,13 @@
        "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names_and_ranks[0] # '1. Buenos Aires'\n",
+    "names_and_ranks[0] ,\n",
     "names_and_ranks[1]\n",
     "names_and_ranks[-1] "
    ]
