--- a/index.ipynb
+++ b/index.ipynb
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1099,14 +1099,14 @@
        "'12. Iguazu Falls'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "names_and_ranks[0] ,\n",
-    "names_and_ranks[1]\n",
+    "names_and_ranks[1] ,\n",
     "names_and_ranks[-1] "
    ]
   },
