--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,9 +1122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []\n",
-    "for index in city_indices: \n",
-    "    names_and_ranks.append(f\"{index + 1}. {city_names[index]}\")"
+    "city_populations = []\n"
    ]
   },
   {
